k8s/mysql-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ec-auth-mysql
  labels:
    name: ec-auth-mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ec-auth-mysql
spec:
  selector:
    matchLabels:
      app: ec-auth-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ec-auth-mysql
    spec:
      containers:
        - image: mysql:8.0
          name: ec-auth-mysql
          ports:
            - containerPort: 3306
              name: ec-auth-mysql
          volumeMounts:
            - name: ec-auth-mysql-persistent-storage
              mountPath: /var/lib/mysql
          # resources:
          #   limits:
          #     cpu: "100m"
          #   requests:
          #     cpu: "10m"


      volumes:
        - name: ec-auth-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: ec-auth-mysql-pv-claim
