k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ec-auth-deployment
  labels:
    app: ec-auth
spec:
  selector:
    matchLabels:
      app: ec-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: ec-auth
    spec:
      containers:
      - name: ec-auth
        image: joeyfontys/s6-ec-auth
        # resources:
        #   limits:
        #     cpu: 500m
        #   requests:
        #     cpu: 200m
        ports:
        - containerPort: 3001
