k8s/mysql-deploy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ec-auth-mysql
spec:
  selector:
    matchLabels:
      app: ec-auth-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ec-auth-mysql
    spec:
      containers:
        - image: mysql:8.0
          name: ec-auth-mysql
          ports:
            - containerPort: 3306
              name: ec-auth-mysql
          volumeMounts:
            - name: ec-auth-mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: ec-auth-db-configmap
              mountPath: /docker-entrypoint-initdb.d
          # resources:
          #   limits:
          #     cpu: "100m"
          #   requests:
          #     cpu: "10m"


      volumes:
        - name: ec-auth-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: ec-auth-mysql-pv-claim
        - name: ec-auth-db-configmap
          configMap:
            name: ec-auth-db-configmap

---

apiVersion: v1
kind: Service
metadata:
  name: ec-auth-mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 31000
  type: LoadBalancer
  selector:
    app: ec-auth-mysql
