k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ec-auth-mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 31000
  type: LoadBalancer
  selector:
    app: ec-auth-mysql
