k8s/node-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ec-auth-deployment
  labels:
    app: ec-auth
spec:
  selector:
    matchLabels:
      app: ec-auth
  replicas: 1
  template:
    metadata:
      labels:
        app: ec-auth
    spec:
      containers:
      - name: ec-auth
        image: joeyfontys/s6-ec-auth
        resources:
          requests:
            cpu: 64m
            memory: 100Mi
          limits:
            cpu: 400m
            memory: 400Mi
        ports:
        - containerPort: 3001
---

apiVersion: v1
kind: Service
metadata:
  name: ec-auth
spec:
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
  selector:
    app: ec-auth
