k8s/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ec-auth
spec:
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  selector:
    app: ec-auth
