k8s/mysql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"


spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: ec-fr-customer
            port:
              number: 80
      - path: /(api/v1/auth/.*)
        pathType: Prefix
        backend:
          service:
            name: ec-auth
            port:
              number: 3001
      - path: /(api/v1/product/.*)
        pathType: Prefix
        backend:
          service:
            name: ec-prod
            port:
              number: 3002
      - path: /(api/v1/order/.*)
        pathType: Prefix
        backend:
          service:
            name: ec-order
            port:
              number: 3003
